# SupplyForge

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  incident-runbook.md  project-plan.md
frontend/dashboard/: .env.example  index.html  package-lock.json
frontend/dashboard/src/: App.css  App.tsx  index.css  types.ts
gateway/graphql-gateway/: Dockerfile  requirements.txt
gateway/graphql-gateway/app/: __init__.py  cache.py  clients.py  config.py  consumer.py  events.py  schema.py
gateway/graphql-gateway/tests/: conftest.py  test_cache.py  test_clients.py  test_consumer.py  test_health.py  test_resolvers.py
infra/: .env.example  docker-compose.yml  elasticmq.conf
services/ai-validation-worker/: .env.example  Dockerfile  requirements.txt
services/ai-validation-worker/app/: __init__.py  __main__.py  config.py  consumer.py  events.py  handler.py  validator.py
services/ai-validation-worker/tests/: test_handler.py  (+2 more)
services/catalog-service/: .env.example  Dockerfile  requirements.txt
services/ingestion-service/: .env.example  Dockerfile  requirements.txt
services/inventory-service/: .env.example  Dockerfile  requirements.txt
services/order-service/: .env.example  Dockerfile  requirements.txt
services/supplier-service/: .env.example  Dockerfile  requirements.txt
shared/auth/: pyproject.toml
shared/auth/src/supplyforge_auth/: __init__.py  cookies.py  flask_auth.py  passwords.py  sessions.py  totp.py
shared/auth/tests/: test_flask_auth.py  test_passwords.py  test_sessions.py  test_totp.py
(+76 files in other folders)
